@@ -139,7 +139,6 @@ function print_credits()
 			}
 
    			$DisplaySubTot = number_format2($SubTotal,$dec);
-   			$DisplayFreight = number_format2($sign*$myrow["ov_freight"],$dec);
 
     		$rep->row = $rep->bottomMargin + (15 * $rep->lineHeight);
 			$doctype = ST_CUSTCREDIT;
@@ -147,9 +146,13 @@ function print_credits()
 			$rep->TextCol(3, 6, _("Sub-total"), -2);
 			$rep->TextCol(6, 7,	$DisplaySubTot, -2);
 			$rep->NewLine();
-			$rep->TextCol(3, 6, _("Shipping"), -2);
-			$rep->TextCol(6, 7,	$DisplayFreight, -2);
-			$rep->NewLine();
+			if ($myrow['ov_freight'] != 0.0)
+			{
+   				$DisplayFreight = number_format2($sign*$myrow["ov_freight"],$dec);
+				$rep->TextCol(3, 6, _("Shipping"), -2);
+				$rep->TextCol(6, 7,	$DisplayFreight, -2);
+				$rep->NewLine();
+			}	
 			$tax_items = get_trans_tax_details(ST_CUSTCREDIT, $i);
 			$first = true;
     		while ($tax_item = db_fetch($tax_items))
